--- a/Ejercicio2/style.css
+++ b/Ejercicio2/style.css
@@ -11,6 +11,14 @@ body{
     margin: 0;
     padding: 0;
 }
+
+.background{
+    position:relative; 
+    
+    background-color: aqua;
+    height: 30rem;
+}
+
 h1{
     margin-top: 4rem;
     text-align: center;
@@ -19,6 +27,65 @@ h1{
     font-size: 3rem;
 
 }
+
+
+
+main{
+    width: 40rem;
+    margin:  2rem auto;
+
+   
+
+    h2{
+        font-size: 2.5rem;
+        text-align: center;
+        text-transform: uppercase;
+        margin: 1rem 0;
+    }
+    h3{
+        margin: 1rem 0;
+        font-size: 3rem;
+        text-align: center;
+    }
+    .button-area{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 0 2rem;
+        gap: 1rem 1rem;
+        justify-content: center;
+        
+        button{
+            height: 3rem;
+            background-color: rgb(255, 255, 115);
+            border-radius: 6px;
+            font-size: 1rem;
+            font-weight: 600;
+            border: 0px solid black;
+            width: 80%;
+            margin: 0 auto;
+            box-shadow: 0px 2px 10px 2px rgb(49, 49, 54);
+        }
+        .guess-button{
+            display: block;
+            grid-column: span 2;
+            width: 90%;
+        }
+        p{
+            color: white;
+            font-size: 2rem;
+            text-align: center;
+            grid-column: span 2;
+            font-weight: 700;
+        }
+    }
+    .number-players{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+   
+}
+
 .rules{
     background-color: #fd67b9;
     box-shadow: 0px 10px 10px 5px rgb(49, 49, 54);
@@ -40,49 +107,9 @@ h1{
         margin:  2rem;
         font-weight: 500;
         text-align: center;
-        
-
     }
-}
-
-main{
-    width: 40rem;
-
-    margin:  2rem auto;
-
-    h2{
-        font-size: 2rem;
-        text-align: center;
-        text-transform: uppercase;
-    }
-    h3{
-        font-size: 3rem;
-        text-align: center;
-    }
-    .button-area{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        margin: 0 2rem;
-        gap: 1rem 1rem;
-        justify-content: center;
-        
-        button{
-            height: 3rem;
-            background-color: rgb(255, 255, 115);
-            border-radius: 6px;
-            font-size: 1rem;
-            font-weight: 600;
-            border: 3px solid black;
-            width: 80%;
-            margin: 0 auto;
-        }
-        .guess-button{
-            display: block;
-            grid-column: span 2;
-            width: 90%;
-
-          
-        }
-    
+    span{
+        font-weight: 800;
+        color: white;
     }
 }
