--- a/Ejercicio2/style.css
+++ b/Ejercicio2/style.css
@@ -13,10 +13,10 @@ body{
 }
 
 .background{
-    position:relative; 
+    position:absolute; 
     
     background-color: aqua;
-    height: 30rem;
+    height: 100%;
 }
 
 h1{
