--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2,14 +2,44 @@ body{
     margin: 0;
     padding: 0;
 }
-h1{
-    font-family: "Jersey 15", serif;
-    font-weight: 400;
-    font-size: 10rem;
-    text-transform: uppercase;
-    span{
-        display: block;
-    }
-    
+.first-background{
+    background-color: aqua;
+    padding: 3rem;
+    .main-background{
+        padding: 3rem;
+        background-color: darkblue;
 
+        h1{
+            margin-top: 5rem;
+            font-family: "Jersey 15", serif;
+            font-weight: 400;
+            font-size: 10rem;
+            text-transform: uppercase;
+            padding: 0;
+            margin: 0;
+            color: white;
+            span{
+                display: block;
+            }
+            .idea-word{
+                color: orange;
+            }
+            
+        
+        }
+        button{
+           padding: 2rem;
+            position: absolute;
+            top:    45%;
+            left: 90%; 
+            background-color: black;
+        }
+        p{
+            margin: 0 0;
+            font-family: "Jersey 25", serif;
+            color: white;
+            font-size: 2rem;
+            margin: 0;
+        }
+    }
 }
