--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,45 +1,151 @@
-body{
+body {
     margin: 0;
     padding: 0;
 }
-.first-background{
-    background-color: aqua;
-    padding: 3rem;
-    .main-background{
-        padding: 3rem;
-        background-color: darkblue;
 
-        h1{
+.first-background {
+    background-color: rgb(148, 198, 255);
+    padding: 3rem 10rem;
+    margin: 0;
+    height: 55rem;
+
+    .main-background {
+        padding: 3rem;
+        background-color: rgb(55, 34, 70);
+
+        h1 {
             margin-top: 5rem;
             font-family: "Jersey 15", serif;
             font-weight: 400;
-            font-size: 10rem;
+            font-size: 11rem;
             text-transform: uppercase;
             padding: 0;
             margin: 0;
             color: white;
-            span{
+
+            span {
                 display: block;
             }
-            .idea-word{
+
+            .idea-word {
                 color: orange;
             }
-            
-        
+
+
         }
-        button{
-           padding: 2rem;
+
+        button {
+            padding: 2rem;
             position: absolute;
-            top:    45%;
-            left: 90%; 
+            top: 45%;
+            right: 12rem;
             background-color: black;
         }
-        p{
+
+        p {
             margin: 0 0;
             font-family: "Jersey 25", serif;
             color: white;
             font-size: 2rem;
             margin: 0;
+            text-align: right;
         }
     }
+
+}
+
+section {
+
+    height: 75rem;
+    background-color: rgb(0, 0, 0);
+    color: white;
+
+    h2 {
+        font-family: "Jersey 15", serif;
+        font-weight: 400;
+        margin: 0;
+        text-align: center;
+        font-size: 8rem;
+
+    }
+
+    .buttons-area {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        justify-items: center;
+        height: 50rem;
+        padding: 5rem 20rem;
+
+        button {
+            border-radius: 30px;
+            height: 14rem;
+            width: 14rem;
+            border-color: 3px solid rgb(89, 44, 121);
+            border-bottom: 10px solid rgb(89, 44, 121);
+        }
+
+        :nth-child(odd) {
+
+            transform: translateY(5rem);
+        }
+    }
+
+    .line-bottom {
+        border-top: 5px dashed rgb(255, 255, 255);
+        height: 2px;
+        width: 95%;
+        padding: 0;
+        margin: 20px auto 0 auto;
+       
+    }
+
+   
+}
+footer {
+   
+    height: 15rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-items: center;
+
+        h3{
+            font-size: 3rem;
+            font-family: "Jersey 15", serif;
+            font-weight: 400;
+            
+        }
+    .socials-area{
+        margin: 1rem;
+        width: 70%;
+        border: 5px dashed rgb(0, 0, 0);
+        border-radius: 10px;
+
+        h4 {
+            text-align: center;
+            font-size: 2rem;
+            font-family: "Jersey 15", serif;
+            font-weight: 400;
+            margin: 1 rem;
+        }
+        .social-buttons {
+            margin: 1rem;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            justify-content: space-around;
+            justify-items: center;
+            height: 5rem;
+            width: 100%;
+           
+            button{
+                
+                border-radius: 10px;
+                padding: 10%;
+                width: 80%;
+                height: 100%;
+                }
+
+        }
+    }
+    
 }
